--- a/RASD/Rasd.tex
+++ b/RASD/Rasd.tex
@@ -10,7 +10,7 @@
 %subsubsubsection
 \titleclass{\subsubsubsection}{straight}[\subsection]
 
-\newcounter{subsubsubsection}
+\newcounter{subsubsubsection}[subsubsection]
 \renewcommand\thesubsubsubsection{\thesubsubsection.\arabic{subsubsubsection}}
 \renewcommand\theparagraph{\thesubsubsubsection.\arabic{paragraph}} % optional; useful if paragraphs are to be numbered
 
@@ -31,13 +31,15 @@
 \def\toclevel@subsubsubsection{4}
 \def\toclevel@paragraph{5}
 \def\toclevel@paragraph{6}
+\@addtoreset{subsubsubsection}{section}
+\@addtoreset{subsubsubsection}{subsection}
 \def\l@subsubsubsection{\@dottedtocline{4}{7em}{4em}}
 \def\l@paragraph{\@dottedtocline{5}{10em}{5em}}
 \def\l@subparagraph{\@dottedtocline{6}{14em}{6em}}
 \makeatother
 %end
-\setcounter{tocdepth}{4}
 \setcounter{secnumdepth}{4}
+\setcounter{tocdepth}{4}
 \hypersetup{
 	colorlinks=true,
 	linkcolor=black,
